# path-following-robot-esp32-wroom-32d

./: .dockerignore  .gitignore  Cargo.toml  Cargo.toml.bak  Dockerfile  README.md  build.rs  diagram.json  docker-compose.yml  wokwi.toml
.cargo/: config.toml
docs/adr/: 001-hexagonal-architecture.md  002-no-embassy-bare-metal-wifi.md  003-dhcp-dynamic-robot-ip-fixed-server.md  004-protobuf-robot-telemetry.md  005-i2c-bus-sharing.md  006-tca9548a-i2c-multiplexer.md  007-sqlx-rustls-over-native-tls.md
docs/runbooks/: 01-prerequisites.md  02-build-and-flash.md  03-wifi-setup.md  04-monitoring.md  05-troubleshooting.md  06-hardware-wiring.md  07-development-guide.md  08-fleet-management.md  09-simulation.md  10-flashing-and-wiring-guide.md
proto/: telemetry.proto
src/: config.rs  lib.rs
src/adapters/: mod.rs
src/adapters/esp32/: drv8833.rs  joystick.rs  lcd1602.rs  mod.rs  ssd1306_oled.rs  tca9548a.rs  tf_luna.rs  uln2003.rs  vl53l0x.rs  vl53l0x_direct.rs  wifi.rs
src/adapters/stub/: distance.rs  mod.rs
src/domain/: mod.rs  path.rs  robot.rs  state.rs
src/ports/: display.rs  distance.rs  input.rs  mod.rs  motors.rs  remote_control.rs  stepper.rs  telemetry.rs
src/proto/: mod.rs
src/server/: mod.rs
src/server/application/: command_service.rs  fleet_query.rs  ingest_telemetry.rs  mod.rs
src/server/domain/: command.rs  event.rs  mod.rs  robot_id.rs  snapshot.rs  telemetry.rs
src/server/http/: mod.rs  state.rs
src/server/http/handlers/: command.rs  fleet.rs  logs.rs  mod.rs  sse.rs  ui.rs
src/server/http/templates/: _shared.css  _shared.js  fleet.html  robot.html
src/server/infrastructure/: broadcast_event_publisher.rs  in_memory_repository.rs  mod.rs  postgres_repository.rs  udp_command_gateway.rs  udp_telemetry_ingress.rs
src/server/ports/: command_gateway.rs  event_publisher.rs  fleet_repository.rs  mod.rs
tests/: fsm_scenarios.rs
